Fri Jun 22 17:47:36 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lt: If an input token has a yyminor, report
	  its name in the debug output.

Fri Jun 22 14:47:17 BST 2007  Olly Betts <olly@survex.com>

	* NEWS: Updated with changes since 1.0.1.

Thu Jun 21 21:12:49 BST 2007  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc,common/remoteprotocol.h,
	  common/remoteserver.h,net/remoteserver.cc: Protocol version
	  increased to 30.2.  This difference from 30.1 is that
	  MSG_DELETEDOCUMENT now send REPLY_DONE to allow DocNotFoundError
	  to be propagated.  MSG_DELETEDOCUMENT now has a new number and
	  the old number for MSG_DELETEDOCUMENT is now
	  MSG_DELETEDOCUMENT_PRE_30_2 which is handled by the server so
	  that older clients will continue to work.
	* docs/remote_protocol.html: Update.
	* tests/api_wrdb.cc: Add regression test for DocNotFoundError bug.

Thu Jun 21 17:22:53 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,tests/queryparsertest.cc,docs/spelling.rst: Add
	  support for spelling correction when using multiple databases.

Thu Jun 21 16:15:22 BST 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add feature tests for correcting spelling
	  errors in the QueryParser.

Thu Jun 21 15:01:00 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Check the edit distance 3 words are found if
	  asked for.

Thu Jun 21 14:59:15 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,common/omdebug.h: Add some debug tracing for the
	  spelling correction.

Thu Jun 21 13:45:12 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.cc,docs/spelling.rst: Generate
	  "bookends" for four character words too, so that we suggest
	  "fuor" -> "four".
	* tests/api_wrdb.cc: More testcases.

Thu Jun 21 13:08:07 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Assorted minor improvements.  Add note about not