@@ -1,3 +1,9 @@
+Fri Jun 22 17:52:53 BST 2007  Olly Betts <olly@survex.com>
+
+	* bin/xapian-inspect.cc: Don't die with an error if the user tries to
+	  move forward twice from the end.  Also, make "prev" from the end
+	  work.
+
 Fri Jun 22 17:47:36 BST 2007  Olly Betts <olly@survex.com>
 
 	* queryparser/queryparser.lt: If an input token has a yyminor, report
